im close to giving up

--- a/Writing/Interim_Report/My_Library.bib
+++ b/Writing/Interim_Report/My_Library.bib
@@ -1257,3 +1257,80 @@ This first paper focusses on the systematic modelling and experimental verificat
 	pages = {115581},
 	file = {ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/ZLXJNZFB/S2352152X25002944.html:text/html},
 }
+
+@article{gifford_lithium_nodate-1,
+	title = {Lithium, {Cobalt} and {Nickel}: {The} {Gold} {Rush} of the 21st {Century}},
+	language = {en},
+	number = {6},
+	author = {Gifford, Stephen},
+	file = {PDF:/Users/georgekirby/Zotero/storage/LJ5HUNXX/Gifford - Lithium, Cobalt and Nickel The Gold Rush of the 21st Century.pdf:application/pdf},
+}
+
+@article{boettcher_potentially_2021,
+	title = {Potentially {Confusing}: {Potentials} in {Electrochemistry}},
+	volume = {6},
+	shorttitle = {Potentially {Confusing}},
+	url = {https://doi.org/10.1021/acsenergylett.0c02443},
+	doi = {10.1021/acsenergylett.0c02443},
+	number = {1},
+	urldate = {2025-12-02},
+	journal = {ACS Energy Letters},
+	author = {Boettcher, Shannon W. and Oener, Sebastian Z. and Lonergan, Mark C. and Surendranath, Yogesh and Ardo, Shane and Brozek, Carl and Kempler, Paul A.},
+	month = jan,
+	year = {2021},
+	note = {Publisher: American Chemical Society},
+	pages = {261--266},
+	file = {Full Text PDF:/Users/georgekirby/Zotero/storage/ZUG2LJIX/Boettcher et al. - 2021 - Potentially Confusing Potentials in Electrochemistry.pdf:application/pdf},
+}
+
+@misc{noauthor_battery_2023,
+	title = {Battery {Metals} {Report} 2023/03 - {Everything} you need to know about the battery metals lithium, nickel, cobalt and copper!},
+	url = {https://www.resource-capital.ch/en/reports/view/battery-metals-report-2023-03/},
+	language = {en},
+	urldate = {2025-12-02},
+	journal = {Swiss Resource Capital AG},
+	month = mar,
+	year = {2023},
+	file = {Snapshot:/Users/georgekirby/Zotero/storage/QWEIVTKN/battery-metals-report-2023-03.html:text/html},
+}
+
+@article{appiah_unravelling_2024-1,
+	title = {Unravelling degradation mechanisms and overpotential sources in aged and non-aged batteries: {A} non-invasive diagnosis},
+	volume = {84},
+	issn = {2352-152X},
+	shorttitle = {Unravelling degradation mechanisms and overpotential sources in aged and non-aged batteries},
+	url = {https://www.sciencedirect.com/science/article/pii/S2352152X2400584X},
+	doi = {10.1016/j.est.2024.111000},
+	abstract = {In-depth analysis of overpotentials in complex electrochemical systems such as lithium-ion batteries is necessary for enhancing their energy and power density. However, dynamic operating conditions and complicated ageing mechanisms create challenges in determining the major sources of these overpotentials. We estimate the overpotentials of cells in a dataset consisting of aged and non-aged commercial lithium iron phosphate/graphite cells cycled under fast charging conditions. Using the pseudo-two-dimensional (P2D) model and the discharge profiles of the first 630 cycles, we conducted an in-situ monitoring of the sources of the overpotentials of cells that exhibited the longest, median, and shortest end of life. A derived analytical expression is used to decompose the total overpotential into lithium concentration overpotential, electrolyte concentration overpotential, ohmic overpotential and kinetic overpotential. The major source of overpotential is from the loss of lithium inventory and loss of active materials during cycling. This work highlights the importance of combining big data approach and physics-based models to learn from the overpotentials of complex electrochemical systems.},
+	urldate = {2025-12-02},
+	journal = {Journal of Energy Storage},
+	author = {Appiah, Williams Agyei and Rieger, Laura Hannemose and Flores, Eibar and Vegge, Tejs and Bhowmik, Arghya},
+	month = apr,
+	year = {2024},
+	keywords = {Degradation mechanisms, In-situ diagnosis, Lithium-ion batteries, Overpotentials, Pseudo-two-dimensional model},
+	pages = {111000},
+	file = {ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/9DZ6WATB/S2352152X2400584X.html:text/html},
+}
+
+@misc{noauthor_artech_nodate,
+	title = {{ARTECH} {HOUSE} {U}.{K}.: {Battery} {Management} {Systems}, {Volume} {III}: {Physics}-{Based} {Methods}},
+	url = {https://uk.artechhouse.com/Battery-Management-Systems-Volume-III-Physics-Based-Methods-P2201.aspx},
+	urldate = {2025-12-02},
+	file = {ARTECH HOUSE U.K.\: Battery Management Systems, Volume III\: Physics-Based Methods:/Users/georgekirby/Zotero/storage/MBT59CII/Battery-Management-Systems-Volume-III-Physics-Based-Methods-P2201.html:text/html},
+}
+
+@misc{noauthor_battery_nodate,
+	title = {Battery {Management} {Systems}, {Volume} 1: {Battery} {Modeling}},
+	url = {http://mocha-java.uccs.edu/BMS1/},
+	urldate = {2025-12-02},
+	file = {Battery Management Systems, Volume 1\: Battery Modeling:/Users/georgekirby/Zotero/storage/J53XGQKL/BMS1.html:text/html},
+}
+
+@misc{noauthor_bayesian_nodate-1,
+	title = {Bayesian {Optimization} {Algorithm} - {MATLAB} \& {Simulink}},
+	url = {https://uk.mathworks.com/help/stats/bayesian-optimization-algorithm.html},
+	abstract = {Understand the underlying algorithms for Bayesian optimization.},
+	language = {en},
+	urldate = {2025-12-02},
+	file = {Snapshot:/Users/georgekirby/Zotero/storage/UJK6SF9Z/bayesian-optimization-algorithm.html:text/html},
+}
