--- a/Writing/Interim_Report/main.tex
+++ b/Writing/Interim_Report/main.tex
@@ -216,7 +216,7 @@ A. Farman \textit{et al} \cite{farmann_study_2017}, shows that the OCV of lithiu
 
 \subsection{Charging methods}
 
-There exists many techniques to charge batteries with a graphical summary of the common methods shwon in figure xx, cite Qian Lin \cite{chen_overpotential_2021-1 highliths the different methods described below. The most common method is known as CC-CV charge. This is where the bulk charge is done such that the applied overportnetial to the battery causes a constant current to flow, the voltage potential of the battery rises to a defined maximum point, the charging device then switches to a contant voltage charging mode, this fixed voltage is held until the charge current decays to a negligable or fixed amount - current still flows during this stage as there is still an overpotnetial between the batteries equlibrium state and the applied constant voltage. This is the simplest to implament without the need for an accurate SoC reading to risk overcharging (like would be with pure CC charging). 
+There exists many techniques to charge batteries with a graphical summary of the common methods shwon in figure xx, cite Qian Lin \cite{chen_overpotential_2021-1} highliths the different methods described below. The most common method is known as CC-CV charge. This is where the bulk charge is done such that the applied overportnetial to the battery causes a constant current to flow, the voltage potential of the battery rises to a defined maximum point, the charging device then switches to a contant voltage charging mode, this fixed voltage is held until the charge current decays to a negligable or fixed amount - current still flows during this stage as there is still an overpotnetial between the batteries equlibrium state and the applied constant voltage. This is the simplest to implament without the need for an accurate SoC reading to risk overcharging (like would be with pure CC charging). 
 
 \begin{figure}[ht]
     \centering
