--- a/Writing/Interim_Report/My_Library.bib
+++ b/Writing/Interim_Report/My_Library.bib
@@ -768,22 +768,6 @@ This first paper focusses on the systematic modelling and experimental verificat
 	file = {ScienceDirect Full Text PDF:/Users/georgekirby/Zotero/storage/TH7I85XW/Li et al. - 2014 - A review of lithium deposition in lithium-ion and lithium metal secondary batteries.pdf:application/pdf;ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/3FUQUYIU/S0378775313020880.html:text/html},
 }
 
-@article{chen_overpotential_2021-2,
-	title = {Overpotential analysis of graphite-based {Li}-ion batteries seen from a porous electrode modeling perspective},
-	volume = {509},
-	issn = {0378-7753},
-	url = {https://www.sciencedirect.com/science/article/pii/S0378775321008570},
-	doi = {10.1016/j.jpowsour.2021.230345},
-	abstract = {The overpotential of Li-ion batteries is one of the most relevant characteristics influencing the power and energy densities of these battery systems. However, the intrinsic complexity and multi-influencing factors make it challenging to analyze the overpotential precisely. To decompose the total overpotential of a battery into various individual components, a pseudo-two-dimensional (P2D) model has been adopted and used for electrochemical simulations of a graphite-based porous electrode/Li battery. Analytical expressions for the total overpotential have been mathematically derived and split up into four terms, associated with the electrolyte concentration overpotential, the Li concentration overpotential in the solid, the kinetic overpotential, and the ohmic overpotential. All these four terms have been separately analyzed and are found to be strongly dependent on the physical/chemical battery parameters and the reaction-rate distribution inside the porous electrode. The reaction-rate distribution of the porous electrode is generally non-uniform and shows dynamic changes during (dis)charging, resulting in fluctuations in the four overpotential components. In addition, the disappearance of the phase-change information in the voltage curve of the graphite-based porous electrode/Li battery under moderate and high C-rates is ascribed to the Li concentration overpotential among solid particles, resulting from the non-uniform reaction-rate distribution.},
-	urldate = {2025-11-19},
-	journal = {Journal of Power Sources},
-	author = {Chen, Zhiqiang and Danilov, Dmitri L. and Raijmakers, Luc H. J. and Chayambuka, Kudakwashe and Jiang, Ming and Zhou, Lei and Zhou, Jiang and Eichel, Rüdiger-A. and Notten, Peter H. L.},
-	month = oct,
-	year = {2021},
-	keywords = {Li-ion batteries, Overpotential, P2D model, Porous electrodes, Reaction-rate distribution},
-	pages = {230345},
-}
-
 @article{li_physics-based_2019,
 	title = {A physics-based distributed-parameter equivalent circuit model for lithium-ion batteries},
 	volume = {299},
@@ -1333,4 +1317,40 @@ This first paper focusses on the systematic modelling and experimental verificat
 	language = {en},
 	urldate = {2025-12-02},
 	file = {Snapshot:/Users/georgekirby/Zotero/storage/UJK6SF9Z/bayesian-optimization-algorithm.html:text/html},
+}
+
+@article{xu_precise_2025,
+	title = {Precise determination of the continuous entropic coefficient profile of lithium-ion batteries using frequency-domain method},
+	volume = {240},
+	issn = {0263-2241},
+	url = {https://www.sciencedirect.com/science/article/pii/S0263224124014635},
+	doi = {10.1016/j.measurement.2024.115578},
+	abstract = {Accurate measurements of the entropic coefficient of lithium-ion batteries (LIBs) are essential for optimizing the battery thermal management systems, which are usually accomplished with the potentiometric method. However, as this method requires much time, its applications are greatly limited in commercial settings. The present work addresses this issue by proposing a fast and precise method, characteristic of a standard square wave current with a DC offset as input, to determine the continuous entropic coefficient profile of LIBs based on frequency-domain analysis. The measurement error introduced by the DC offset current is analyzed and further eliminated by reversing the current. By establishing a differential isothermal testing platform and accurately measuring the transfer function, the proposed method results in a continuous entropic coefficient profile, which agrees well with the discrete values obtained through the potentiometric method, meanwhile the measurement speed is 150 times faster than that of the potentiometric method. In terms of time and accuracy, the proposed method is advantageous and promising in on-board battery diagnostics applications.},
+	urldate = {2025-12-02},
+	journal = {Measurement},
+	author = {Xu, Jinxin and Xiong, Kai and Tang, Taoran and Chen, Yuanjie and Hu, Dongfang and Hou, Dexin and Yu, Mingming and Ding, Jiong},
+	month = jan,
+	year = {2025},
+	keywords = {Entropic coefficient, Frequency-domain method, Lithium-ion battery, Reversible heat, Thermal management},
+	pages = {115578},
+	file = {ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/ZPXXHZFT/S0263224124014635.html:text/html},
+}
+
+@article{tucker_optimal_2023,
+	title = {Optimal fast charging of lithium ion batteries: between model-based and data-driven methods},
+	volume = {170},
+	copyright = {cc\_by\_4},
+	issn = {0013-4651},
+	shorttitle = {Optimal fast charging of lithium ion batteries},
+	url = {https://eprints.whiterose.ac.uk/id/eprint/209066/},
+	abstract = {Delivering lithium ion batteries capable of fast charging without suffering from accelerated degradation is an important milestone for transport electrification. Recently, there has been growing interest in applying data-driven methods for optimising fast charging protocols to avoid accelerated battery degradation. However, such data-driven approaches suffer from a lack of robustness, explainability and generalisability, which has hindered their wide-spread use in practice. To address this issue, this paper proposes a method to interpret the fast charging protocols of data-driven algorithms as the solutions of a model-based optimal control problem. This hybrid approach combines the power of data-driven methods for predicting battery degradation with the flexibility and optimality guarantees of the model-based approach. The results highlight the potential of the proposed hybrid approach for generating fast charging protocols. In particular, for fast charging to 80\% state-of-charge in 10 min, the proposed approach was predicted to increase the cycle life from 912 to 1078 cycles when compared against a purely data-driven approach.},
+	language = {en},
+	number = {12},
+	urldate = {2025-12-02},
+	journal = {Journal of The Electrochemical Society},
+	author = {Tucker, G. and Drummond, R. and Duncan, S. R.},
+	month = dec,
+	year = {2023},
+	note = {Publisher: The Electrochemical Society},
+	file = {Full Text PDF:/Users/georgekirby/Zotero/storage/HWQ77CIC/Tucker et al. - 2023 - Optimal fast charging of lithium ion batteries between model-based and data-driven methods.pdf:application/pdf;Snapshot:/Users/georgekirby/Zotero/storage/ZHUH82RA/209066.html:text/html},
 }
